fix invisible context menu blocking mouse input

--- a/src/css/ui/contextmenu.css
+++ b/src/css/ui/contextmenu.css
@@ -29,4 +29,5 @@
 
 #context.cmhide {
   opacity: 0;
+  pointer-events: none;
 }
